@@ -634,6 +634,9 @@
 	- updated copyright year in README
 	- only keep final.png when "store_output" is set to 2
 	- only call -listsoftware for sets with "original" softwarelist hooked up
+	- also run a software list entry without any slot when "use_softwarelist" is set to 3
+	- no softwarelist entries might have been used at all when "use_softwarelist" is set to 3 because of bogus counting of processed entries
+	- the number of the softwarelist entry in the result will now always match the place in the software list
 	
 	create_report
 	- pass the file descriptor as parameter to PRINT_INFO
